@@ -5,53 +5,58 @@ import com.savchenko.sqlTool.model.command.*;
 import com.savchenko.sqlTool.model.expression.BinaryOperation;
 import com.savchenko.sqlTool.model.expression.BooleanValue;
 import com.savchenko.sqlTool.model.expression.Expression;
+import com.savchenko.sqlTool.model.index.Index;
 import com.savchenko.sqlTool.model.operator.Operator;
 import com.savchenko.sqlTool.model.structure.Column;
+import com.savchenko.sqlTool.repository.Projection;
+import org.apache.commons.collections4.ListUtils;
 
 import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 
 public class Query implements Builder<List<Command>> {
+    private final Projection projection;
     private final List<Command> commands = new LinkedList<>();
 
-    public static Query create() {
-        return new Query();
+    public Query(Projection projection) {
+        this.projection = projection;
     }
 
-    public Query select(Column... columns) {
-        commands.add(new Select(Arrays.asList(columns)));
+    public Query select(Column column, Column... columns) {
+        var targetColumns = ListUtils.union(List.of(column), Arrays.asList(columns));
+        commands.add(new Select(targetColumns, projection));
         return this;
     }
 
-    public Query from(String... tables) {
-        commands.add(new From(Arrays.stream(tables).toList()));
+    public Query from(String table) {
+        commands.add(new From(table, projection));
         return this;
     }
 
-    public Query innerJoin(String table, Expression<?> expression) {
-        commands.add(new InnerJoin(table, expression));
+    public Query innerJoin(String table, Expression<?> expression, JoinStrategy strategy) {
+        commands.add(new InnerJoin(table, expression, strategy, projection));
         return this;
     }
 
-    public Query leftJoin(String table, Expression<?> expression) {
-        commands.add(new LeftJoin(table, expression));
+    public Query leftJoin(String table, Expression<?> expression, JoinStrategy strategy) {
+        commands.add(new LeftJoin(table, expression, strategy, projection));
         return this;
     }
 
-    public Query rightJoin(String table, Expression<?> expression) {
-        commands.add(new RightJoin(table, expression));
+    public Query rightJoin(String table, Expression<?> expression, JoinStrategy strategy) {
+        commands.add(new RightJoin(table, expression, strategy, projection));
         return this;
     }
 
-    public Query fullJoin(String table, Expression<?> expression) {
-        commands.add(new FullJoin(table, expression));
+    public Query fullJoin(String table, Expression<?> expression, JoinStrategy strategy) {
+        commands.add(new FullJoin(table, expression, strategy, projection));
         return this;
     }
 
     public Query where(Expression<?>... expressions) {
         var expression = Arrays.stream(expressions).reduce(new BooleanValue(true), (p, c) -> new BinaryOperation(Operator.AND, p, c));
-        commands.add(new Where(expression));
+        commands.add(new Where(expression, projection));
         return this;
     }
 
@@ -62,17 +67,22 @@ public class Query implements Builder<List<Command>> {
             }
             return (Order) specifier;
         }).toList();
-        commands.add(new OrderBy(orders));
+        commands.add(new OrderBy(orders, projection));
         return this;
     }
 
     public Query limit(Integer limit) {
-        commands.add(new Limit(limit));
+        commands.add(new Limit(limit, projection));
         return this;
     }
 
     public Query offset(Integer offset) {
-        commands.add(new Offset(offset));
+        commands.add(new Offset(offset, projection));
+        return this;
+    }
+
+    public Query constructIndex(Index index) {
+        commands.add(new ConstructIndex(index, projection));
         return this;
     }
 
